Add notes on matplotlib, an example dataset
Former-commit-id: 46d2ecff07f92a5810274219d22eb2c4fbf64884
Former-commit-id: ed7d6f71ba015b65df88734833a0f9df7f639f5f

--- a/src/wine_analysis_hplc_uv/notebooks/plotting_cheatsheet.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/plotting_cheatsheet.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| verb | method | notes |\n",
-    "|---|---|---|\n",
-    "| put legend outside plot | plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.) | NA | \n"
+    "# put legend outside plot\n",
+    "\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n"
    ]
   },
   {
@@ -16,8 +16,9 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "g = sns.FacetGrid(plot_df, col='vars') # sets up a facet grid on a variable column\n",
-    "g.map_dataframe(sns.lineplot, x='mins',y='value',hue='wine') # plots on other specified variables"
+    "import numpy as np\n",
+    "penguins = sns.load_dataset('penguins')\n",
+    "penguins.head()\n"
    ]
   },
   {
@@ -58,6 +59,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Matplotlib\n",
+    "\n",
+    "The best, most versatile plotting library in Python ecosystem, most other libraries are simply user-friendly front-ends for Matplotlib. Downside is that it is non-intuitive and carries a lot of technical debt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(1)\n",
+    "\n",
+    "# plot bill_depth_mm against bill_length_mm by species as overlay\n",
+    "_ = penguins.groupby('species').apply(lambda species: ax.plot(species.bill_length_mm, species.bill_depth_mm,'.'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "legend can be added by calling `.add_legend` on Axes object returned by FacetGrid mapping"
    ]
   }
@@ -69,7 +93,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.1"
   }
  },
