add descriptive comments to each code cell. Define a generalised DTW alignment class. find top 20 aligned peaks, build peak table, plot an overlay of peaks before and after alignment
Former-commit-id: c58737a3905132e580fb440bba0d70a2182b1d39
Former-commit-id: 3b9a9057a81948e295efd560161ed74b88cddafd

--- a/src/wine_analysis_hplc_uv/notebooks/chapter_signal_eda_by_category_2.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/chapter_signal_eda_by_category_2.ipynb
@@ -29,7 +29,6 @@
     ")\n",
     "from pybaselines import Baseline\n",
     "import seaborn as sns\n",
-    "sns.set_theme(rc={'figure.dpi': 100})\n",
     "import matplotlib.pyplot as plt\n",
     "from wine_analysis_hplc_uv.notebooks import eda_by_category_methods\n",
     "plotter = eda_by_category_methods.Plotting()\n",
@@ -55,9 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# redo process pipe with transform rather than apply\n",
-    "\n",
     "# time std and drop vars level\n",
+    "\n",
     "pdata = (\n",
     "    data.dropna()\n",
     "    .pipe(scipro.standardize_time)\n",
@@ -116,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot\n",
+    "# plot baseline correction\n",
     "\n",
     "(\n",
     "    rdata.melt(\n",
@@ -132,18 +130,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "find peaks before alignment"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# find peaks\n",
-    "def peak_finder(x, kwargs: dict = dict()) -> pd.Series:\n",
-    "    a = signal.find_peaks(x, **kwargs)[0]\n",
-    "    peaks = x.iloc[a]\n",
-    "    return peaks\n",
-    "\n",
+    "# detect peaks prior to alignment\n",
     "\n",
     "sdata = rdata.assign(\n",
-    "    bcorr_peaks=lambda df: df.groupby(\"samplecode\")[\"bcorr\"].transform(peak_finder)\n",
+    "    bcorr_peaks=lambda df: df.groupby(\"samplecode\")[\"bcorr\"].transform(lambda x: x.iloc[signal.find_peaks(x)[0]])\n",
     ")\n",
     "sdata.head()"
    ]
@@ -183,11 +180,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get top 10 peaks per sample\n",
+    "# get top 20 peaks of the unaligned set\n",
+    "\n",
     "tdata = sdata.assign(\n",
-    "    bcorr_top_10=lambda df: df.groupby(\"samplecode\", group_keys=False)[\n",
+    "    bcorr_top_20=lambda df: df.groupby(\"samplecode\", group_keys=False)[\n",
     "        \"bcorr_peaks\"\n",
-    "    ].nlargest(10)\n",
+    "    ].nlargest(20)\n",
     ")\n",
     "\n",
     "# plot the peaks on top of the curves\n",
@@ -196,7 +194,7 @@
     "        lambda df: (\n",
     "            so.Plot(df, x=\"mins\", color=\"samplecode\")\n",
     "            .add(so.Line(), y=\"bcorr\")\n",
-    "            .add(so.Dot(), y=\"bcorr_top_10\")\n",
+    "            .add(so.Dot(), y=\"bcorr_top_20\")\n",
     "            .plot()\n",
     "        )\n",
     "    )\n",
@@ -208,13 +206,13 @@
     "        lambda df: (\n",
     "            df\n",
     "            if display(\n",
-    "                df.loc[:, [\"samplecode\", \"wine\", \"mins\", \"bcorr_top_10\"]]\n",
+    "                df.loc[:, [\"samplecode\", \"wine\", \"mins\", \"bcorr_top_20\"]]\n",
     "                .dropna()\n",
     "                .assign(n_peak=lambda df: df.groupby(\"samplecode\").cumcount())\n",
     "                .pivot(\n",
     "                    columns=[\"samplecode\", \"wine\"],\n",
     "                    index=[\"n_peak\"],\n",
-    "                    values=[\"mins\", \"bcorr_top_10\"],\n",
+    "                    values=[\"mins\", \"bcorr_top_20\"],\n",
     "                )\n",
     "                .reorder_levels([1, 2, 0], axis=1)\n",
     "                .sort_index(axis=1)\n",
@@ -233,37 +231,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tdata.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# apply dtw\n",
-    "\n",
-    "# find reference\n",
-    "\n",
-    "reference = (\n",
-    "    tdata.pivot_table(columns=[\"samplecode\", \"wine\"], index=[\"mins\"], values=\"signal\")\n",
-    "    .corr()\n",
-    "    .mean()\n",
-    "    .loc[lambda df: df == df.max()]\n",
-    "    .pipe(lambda df: df if display(df) else df)  # display df\n",
-    "    .index\n",
-    ")\n",
-    "\n",
-    "display(reference)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,32 +243,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def applydtw(query, ref, kwargs: dict = dict()):\n",
-    "    \"\"\"\n",
-    "    apply dtw\n",
-    "    \"\"\"\n",
-    "    # subset signal by warping path\n",
-    "    # reset index to enable reindexing after Apply functions (i.e. transform), otherwise get duplicate index error\n",
-    "    aligned_query = query.iloc[dtw(x=query, y=ref, **kwargs).get_warping_path()].reset_index(drop=True).values\n",
+    "# define a class to handle DTW methods\n",
+    "\n",
+    "class ApplyDTW():\n",
     "    \n",
-    "    aligned_s = pd.Series(aligned_query, index=query.index)\n",
+    "    def align(self, data, primary_key, siglabel, aligned_label: str, kwargs:dict=dict()):\n",
+    "        \"\"\"\n",
+    "        For a passed long format df find the reference signal and align, assigning back\n",
+    "        to the passed frame\n",
+    "        \n",
+    "        TODO: add internal validation\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        ref_idx = self.find_ref(data, primary_key, siglabel)\n",
+    "        \n",
+    "        \n",
+    "        ref_signal = data.loc[lambda df: df.samplecode==ref_idx][siglabel]\n",
+    "        \n",
+    "        adata = (\n",
+    "            data\n",
+    "            .assign(**{aligned_label:data\n",
+    "                       .groupby(primary_key)[siglabel]\n",
+    "                       .transform(self.applydtw, ref_signal)\n",
+    "                    }\n",
+    "                       )\n",
+    "                           )\n",
+    "        \n",
+    "        return adata\n",
+    "        \n",
     "    \n",
-    "    import pandas.testing as pt\n",
-    "    def assert_series_not_equal(*args, **kwargs):\n",
-    "        try:\n",
-    "            pt.assert_series_equal(*args, **kwargs)\n",
-    "        except AssertionError:\n",
-    "            # frames are not equal\n",
-    "            pass\n",
-    "        else:\n",
-    "            # frames are equal\n",
-    "            raise AssertionError\n",
+    "    def applydtw(self, query, ref, kwargs: dict = dict()):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        apply dtw\n",
+    "        \"\"\"\n",
+    "        # subset signal by warping path\n",
+    "        # reset index to enable reindexing after Apply functions (i.e. transform), \n",
+    "        # otherwise get duplicate index error\n",
+    "        \n",
+    "        aligned_query = (query.iloc[dtw(x=query, y=ref, **kwargs).get_warping_path()]\n",
+    "        .reset_index(drop=True).values)\n",
+    "        \n",
+    "        aligned_s = pd.Series(aligned_query, index=query.index)\n",
+    "        \n",
     "        return aligned_query\n",
     "    \n",
-    "    assert_series_not_equal(left=query,right=aligned_s)\n",
-    "    \n",
-    "    return aligned_query\n",
-    "    "
+    "    def find_ref(self, data, primary_key:str, siglabel:str)->str:\n",
+    "        \"\"\"\n",
+    "        pass long form df and return the idx string for the reference sample\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        tidy_data = data.pivot_table(index='mins',columns=primary_key, values=siglabel)\n",
+    "\n",
+    "        \n",
+    "        ref_idx = (\n",
+    "            tidy_data\n",
+    "            .corr()\n",
+    "            .mean()\n",
+    "            .loc[lambda df: df == df.max()]\n",
+    "            .index[0]\n",
+    "        )\n",
+    "        return ref_idx\n",
+    "        \n",
+    "        \n"
    ]
   },
   {
@@ -310,18 +314,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtw_kwargs = dict(window_type=\"sakoechiba\", window_size=10)\n",
+    "# ref = ApplyDTW().find_ref(tdata, 'samplecode','bcorr')\n",
+    "align = ApplyDTW().align(tdata, primary_key='samplecode',siglabel='bcorr', aligned_label='aligned')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(align)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# align the dataset\n",
     "\n",
-    "ref_signal = (\n",
-    "    tdata.set_index([\"samplecode\", \"wine\"]).loc[reference].bcorr.reset_index(drop=True)\n",
-    ")\n",
-    "\n",
-    "udata = tdata.assign(\n",
-    "    align=lambda x: x.groupby([\"samplecode\"])[\"bcorr\"].transform(\n",
-    "        applydtw, ref_signal, dtw_kwargs\n",
-    "    )\n",
-    ")\n",
-    "\n",
+    "udata = dtwalignment(grouper=['samplecode','wine'], data=tdata, signal_label='bcorr', dtw_kwargs=dict(window_type='sakoechiba',window_size=500), ref_label=reference, aligned_signal_name='aligned_sig_1')\n",
     "udata.head()"
    ]
   },
@@ -331,75 +345,156 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot alignment\n",
-    "(\n",
-    "    udata.pipe(\n",
-    "        lambda df: so.Plot(data=df, x=\"mins\").add(\n",
-    "            so.Line(), y=\"align\", color='samplecode'\n",
-    "        )\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "udata.set_index([\"samplecode\", \"wine\"]).loc[reference, \"bcorr\"].reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# torbreck-struie didnt align well. Try again?\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "Transform is a finnicky bitch. It requires that the output of UDFs are either pd.Series or pd.DataFrames, and that the output has the same index as the input. The reason for this is that it reindexes the output onto the source DF. You would expect it to handle that logic internally, but no, it does not.\n",
-    "\n",
-    "Also, avoid using multiindex as much as possible, it encourages practices which dont align with other OLAP engines such as SQL. Long over wide.\n",
-    "\n",
-    "Note: You can sub in 'display()' basically anywhere to display the target before an Exception is raised\n",
-    "\"\"\"\n",
+    "# plot aligned dataset\n",
     "\n",
     "(\n",
     "    udata\n",
-    "    # get torbreck-struie and the reference signal\n",
-    "    .loc[\n",
-    "        lambda df: (\n",
-    "            (df.samplecode == \"torbreck-struie\")\n",
-    "            | (df.samplecode == reference.get_level_values(\"samplecode\")[0])\n",
-    "        )\n",
-    "    ]\n",
-    "    # add a column containing the warped path indices\n",
-    "    .assign(\n",
-    "        wp=lambda df: df.groupby('samplecode')[\"bcorr\"].transform(\n",
-    "            lambda query: pd.Series(\n",
-    "                dtw(\n",
-    "                    x=query,\n",
-    "                    y=df.set_index([\"samplecode\", \"wine\"])\n",
-    "                    .loc[reference, \"bcorr\"]\n",
-    "                    .reset_index(drop=True),\n",
-    "                ).get_warping_path(),\n",
-    "                index=query.index,\n",
-    "            )\n",
-    "        )\n",
-    "    )\n",
-    "    .reset_index(names=\"i\")\n",
-    "    .assign(warped_signal=lambda df: df.bcorr.iloc[df.wp.values].reset_index(drop=True))\n",
-    "    .set_index(\"i\")\n",
-    "    # plot\n",
+    "    .loc[lambda df: df.mins<20]\n",
     "    .pipe(\n",
-    "        lambda df: so.Plot(data=df, x=\"mins\").add(\n",
-    "            so.Line(), y=\"align\", color='samplecode'\n",
+    "        lambda df: so.Plot(data=df, x=\"mins\",color='samplecode')\n",
+    "        .layout(size=(5,3))\n",
+    "        .add(\n",
+    "            so.Line(), y=\"aligned_sig_1\"\n",
+    "        )\n",
+    "        \n",
+    "    )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot aligned against unaligned set\n",
+    "(\n",
+    "    udata\n",
+    "    .loc[lambda df: df.mins<20]\n",
+    "    .melt(id_vars=['mins','samplecode','wine'],var_name='siglabel',value_vars=['bcorr','aligned_sig_1'],value_name='sig_val')\n",
+    "    .pipe(\n",
+    "        lambda df: so.Plot(data=df, x=\"mins\",color='siglabel')\n",
+    "        .layout(size=(15,10))\n",
+    "        .add(\n",
+    "            so.Line(), y=\"sig_val\"\n",
+    "        )\n",
+    "        .facet(col='samplecode',wrap=2)\n",
+    "    )\n",
+    "        \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# detect peaks in aligned set\n",
+    "\n",
+    "vdata = (udata\n",
+    " .assign(\n",
+    "    peaks_aligned=lambda df: df.groupby(\"samplecode\")[\"aligned_sig_1\"].transform(lambda x: x.iloc[signal.find_peaks(x)[0]])\n",
+    ")\n",
+    ")\n",
+    "vdata.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add column of top 20 peaks in aligned peak set\n",
+    "\n",
+    "wdata = vdata.assign(\n",
+    "    aligned_top_20=lambda df: df.groupby(\"samplecode\", group_keys=False)[\n",
+    "        \"peaks_aligned\"\n",
+    "    ].nlargest(20)\n",
+    ")\n",
+    "wdata.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# construct and display peak table\n",
+    "\n",
+    "aligned_peak_table = (\n",
+    "    wdata.pipe(\n",
+    "        lambda df: \n",
+    "                df\n",
+    "                .loc[:,['mins','samplecode','wine','aligned_top_20']]\n",
+    "                .dropna()\n",
+    "                .assign(n_peak=lambda df: df.groupby(\"samplecode\").cumcount())\n",
+    "                .pipe(lambda df: df if display(df) else df) # display df\n",
+    "                .pivot_table(\n",
+    "                    columns=[\"samplecode\", \"wine\"],\n",
+    "                    index=[\"n_peak\"],\n",
+    "                    values=[\"mins\", \"aligned_top_20\"],\n",
+    "                )\n",
+    "                .reorder_levels([1, 2, 0], axis=1)\n",
+    "                .sort_index(axis=1)\n",
     "        )\n",
     "    )\n",
-    ")"
+    "aligned_peak_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot overlay signals and top 20 peaks\n",
+    "\n",
+    "(\n",
+    "    wdata\n",
+    "    .loc[lambda df: df.mins<20]\n",
+    "    .pipe(lambda df:\n",
+    "        so.Plot(df, x='mins', color='samplecode')\n",
+    "        .add(so.Line(),y='aligned_sig_1')\n",
+    "        .add(so.Dot(), y='aligned_top_20')\n",
+    "        .facet(col='samplecode',wrap=2)\n",
+    "        .layout(size=(15,10))\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot overlay aligned set, unaligned peaks, aligned peaks as dots\n",
+    "\n",
+    "plot_peak_data = wdata.melt(id_vars=['mins','samplecode','wine'],value_vars=['aligned_top_20','bcorr_top_20'], var_name='peak_label',value_name='sig').dropna()\n",
+    "\n",
+    "(\n",
+    "    wdata\n",
+    "    .loc[lambda df: df.mins<20]\n",
+    "    .pipe(lambda df:\n",
+    "        so.Plot(df, x='mins')\n",
+    "        .add(so.Line(), y='aligned_sig_1',color='samplecode')\n",
+    "        .add(so.Dot(),data=plot_peak_data.loc[lambda df: df.mins<20], alpha='peak_label', color='samplecode',x='mins',y='sig')\n",
+    "        # .facet(col='samplecode',wrap=2)\n",
+    "        .layout(size=(15,10))\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see in the above graphic, The majority of the peaks have lost amplitude, and torbreck-struie has straight up lost a peak at 18 mins. We need a better DTW algorithm.\n",
+    "\n",
+    "Need to develop a more reliable alignment method. But we also should look at whether torbreck-struie itself is the issue. First what happens if we exclude it during warping?"
    ]
   }
  ],
